headers/base/orxType.h



  typedef signed    int           orxS32;


  typedef signed    long          orxS32;

  typedef float                   orxFLOAT;

    typedef signed    int         orxS32;

    typedef signed    long        orxS32;

    typedef float                 orxFLOAT;


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;