src/norx/clock.nim


proc orxClock_AddTimer*(pstClock: ptr orxCLOCK; pfnCallback: orxCLOCK_FUNCTION;
                       fDelay: orxFLOAT; s32Repetition: orxS32; pContext: pointer): orxSTATUS {.
    cdecl, importc: "orxClock_AddTimer", dynlib: libORX.}
## * Removes a timer function from a clock
##  @param[in]   _pstClock                             Concerned clock
##  @param[in]   _pfnCallback                          Concerned timer callback to remove, nil to remove all occurrences regardless of their callback
##  @param[in]   _fDelay                               Delay between 2 calls of the timer to remove, -1.0f to remove all occurrences regardless of their respective delay
##  @param[in]   _pContext                             Context of the timer to remove, nil to remove all occurrences regardless of their context
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxClock_RemoveTimer*(pstClock: ptr orxCLOCK; pfnCallback: orxCLOCK_FUNCTION;
                          fDelay: orxFLOAT; pContext: pointer): orxSTATUS {.cdecl,
    importc: "orxClock_RemoveTimer", dynlib: libORX.}
## * Adds a global timer function (ie. using the main core clock)
##  @param[in]   _pfnCallback                          Concerned timer callback
##  @param[in]   _fDelay                               Timer's delay between 2 calls, must be strictly positive
##  @param[in]   _s32Repetition                        Number of times this timer should be called before removed, -1 for infinite
##  @param[in]   _pContext                             Context that will be transmitted to the callback when called
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxClock_AddGlobalTimer*(pfnCallback: orxCLOCK_FUNCTION; fDelay: orxFLOAT;
                             s32Repetition: orxS32; pContext: pointer): orxSTATUS {.
    cdecl, importc: "orxClock_AddGlobalTimer", dynlib: libORX.}
## * Removes a global timer function (ie. from the main core clock)
##  @param[in]   _pfnCallback                          Concerned timer callback to remove, nil to remove all occurrences regardless of their callback
##  @param[in]   _fDelay                               Delay between 2 calls of the timer to remove, -1.0f to remove all occurrences regardless of their respective delay
##  @param[in]   _pContext                             Context of the timer to remove, nil to remove all occurrences regardless of their context
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxClock_RemoveGlobalTimer*(pfnCallback: orxCLOCK_FUNCTION; fDelay: orxFLOAT;
                                pContext: pointer): orxSTATUS {.cdecl,
    importc: "orxClock_RemoveGlobalTimer", dynlib: libORX.}
## * @}
